--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "styled-components": "^6.1.12",
+    "styled-components-theme": "^1.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
