--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT=5000
 DB_URL=mongodb://localhost:27017/propertilico
 JWT_SECRET=okanBaba123@
 JWT_REFRESH_SECRET=falanfilan123
+REACT_APP_API_URL=http://localhost:5000/api
+SERVER_URL=http://localhost:5000
