--- a/client/package.json
+++ b/client/package.json
@@ -7,25 +7,32 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/x-date-pickers": "^7.15.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "framer-motion": "^11.5.4",
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.12",
     "styled-components-theme": "^1.0.5",
     "web-vitals": "^2.1.4"
