--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/x-date-pickers": "^7.15.0",
@@ -27,15 +28,18 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.12",
     "styled-components-theme": "^1.0.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
