major update with even reports

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,6 @@ JWT_SECRET=okanBaba123@
 JWT_REFRESH_SECRET=falanfilan123
 REACT_APP_API_URL=http://localhost:5000/api
 SERVER_URL=http://localhost:5000
+NODE_ENV=development
+CLIENT_URL=http://localhost:3000
+ENCRYPTION_KEY=12345678901234567890123456789012
