--- a/client/package.json
+++ b/client/package.json
@@ -18,15 +18,18 @@
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.5.4",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-error-boundary": "^4.0.13",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
@@ -35,10 +38,12 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
+    "react-to-print": "^2.15.1",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.12",
     "styled-components-theme": "^1.0.5",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "scripts": {
