--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "date-fns": "^3.6.0",
     "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.13.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
