major update for authentication and some server improvements.

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_URL=http://localhost:5000
+REACT_APP_RECAPTCHA_SITE_KEY=6LexjVEqAAAAADANFxy5c256KSKkdoa0ZIjwjt3z
+# Make sure this is your v3 site key
