--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,4 @@ SERVER_URL=http://localhost:5000
 NODE_ENV=development
 CLIENT_URL=http://localhost:3000
 ENCRYPTION_KEY=12345678901234567890123456789012
+RECAPTCHA_SECRET_KEY=6LexjVEqAAAAAJRhth9XRq2lGf6y78b8vKxf0kP-
