--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -31,6 +32,8 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.13",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
