--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -21,6 +22,7 @@
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
+    "express-validator": "^7.2.0",
     "helmet": "^6.2.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
@@ -28,6 +30,7 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "react-google-recaptcha-v3": "^1.10.1",
     "uuid": "^10.0.0",
     "xss-clean": "^0.1.4"
   },
