major updates with auth, google auth hasn't added yet but it will be added after a domain

--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,6 @@ NODE_ENV=development
 CLIENT_URL=http://localhost:3000
 ENCRYPTION_KEY=12345678901234567890123456789012
 RECAPTCHA_SECRET_KEY=6LexjVEqAAAAAJRhth9XRq2lGf6y78b8vKxf0kP-
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+SESSION_SECRET=your_session_secret_here
