--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^11.5.4",
+    "gapi-script": "^1.2.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "leaflet": "^1.9.4",
@@ -32,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.13",
+    "react-google-login": "^5.2.2",
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-helmet": "^6.1.0",
