--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
     "helmet": "^6.2.0",
     "hpp": "^0.2.3",
