public database connections are made, public side of website is functional including blogs and auth system, and app pages are in progress finally a success with postgresql

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
 PORT=5000
-DB_URL=mongodb://localhost:27017/propertilico
 JWT_SECRET=okanBaba123@
 JWT_REFRESH_SECRET=falanfilan123
 REACT_APP_API_URL=http://localhost:5000/api
@@ -11,3 +10,8 @@ RECAPTCHA_SECRET_KEY=6LexjVEqAAAAAJRhth9XRq2lGf6y78b8vKxf0kP-
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 SESSION_SECRET=your_session_secret_here
+DB_USER=postgres
+DB_HOST=localhost
+DB_NAME=propertilico
+DB_PASSWORD=123
+DB_PORT=5432
