--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,10 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "connect-mongo": "^5.1.0",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
@@ -32,7 +33,10 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "react-google-recaptcha-v3": "^1.10.1",
+    "sequelize": "^6.37.4",
     "uuid": "^10.0.0",
     "xss-clean": "^0.1.4"
   },
