--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,3 @@
 REACT_APP_API_URL=http://localhost:5000
-REACT_APP_RECAPTCHA_SITE_KEY=6LexjVEqAAAAADANFxy5c256KSKkdoa0ZIjwjt3z
-REACT_APP_GOOGLE_CLIENT_ID=your_google_client_id_here
+REACT_APP_RECAPTCHA_SITE_KEY="6LexjVEqAAAAADANFxy5c256KSKkdoa0ZIjwjt3z"
 # Make sure this is your v3 site key
