--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "react-google-recaptcha-v3": "^1.10.1",
