--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
-    "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@mui/x-date-pickers": "^5.0.0-beta.7",
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
@@ -21,11 +21,12 @@
     "date-fns": "^2.29.3",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.11.9",
     "gapi-script": "^1.2.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "leaflet": "^1.9.4",
+    "libphonenumber-js": "^1.11.12",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "notistack": "^3.0.1",
