--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "react-google-recaptcha-v3": "^1.10.1",
+    "sanitize-filename": "^1.6.3",
     "sequelize": "^6.37.4",
     "uuid": "^10.0.0",
     "xss-clean": "^0.1.4"
