--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -27,6 +28,7 @@
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^6.2.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
@@ -40,6 +42,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "sanitize-filename": "^1.6.3",
     "sequelize": "^6.37.4",
+    "sharp": "^0.33.5",
     "uuid": "^10.0.0",
     "xss-clean": "^0.1.4"
   },
