--- a/server/package.json
+++ b/server/package.json
@@ -41,8 +41,10 @@
     "pg-hstore": "^2.3.4",
     "react-google-recaptcha-v3": "^1.10.1",
     "sanitize-filename": "^1.6.3",
+    "sanitize-html": "^2.13.1",
     "sequelize": "^6.37.4",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "uuid": "^10.0.0",
     "xss-clean": "^0.1.4"
   },
