--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-apexcharts": "^1.4.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
