--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,9 @@
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
