--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,16 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "date-fns": "^2.29.3",
+    "dompurify": "^3.1.7",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.11",
     "gapi-script": "^1.2.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "leaflet": "^1.9.4",
     "libphonenumber-js": "^1.11.12",
+    "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "notistack": "^3.0.1",
@@ -61,8 +63,12 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
     "chalk": "^5.3.0",
-    "glob": "^11.0.0"
+    "glob": "^11.0.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   },
   "scripts": {
     "start": "react-scripts start",
